src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_deep_apply_additions.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 250
expression: output
---
Model: fixtures/deep_apply_additions/parent.on
Tests: 0/0
Parameters:
  y = Number(Scalar(16.0))
