src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_local_augmentation.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 183
expression: output
---
Model: fixtures/design_local/target.on
Tests: 0/0
Parameters:
  radius = Number(Scalar(10.0))
  diameter = Number(Scalar(20.0))
  circumference = Number(Scalar(62.83185307179586))
