src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_nested_apply_syntax.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"multi_seg_apply/parent_nested.on\")"
---
Model: fixtures/multi_seg_apply/parent_nested.on
Tests: 0/0
Parameters:
  result = Number(Scalar(10.0))
  mid_z = Number(Scalar(42.0))
