src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__extract_through_intermediate.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 147
expression: output
---
Model: fixtures/with_clause/with_extract_through_mid.on
Tests: 0/0
Parameters:
  result = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(1.019367991845056)), unit: Unit { dimension_map: DimensionMap({}), magnitude: 1.0, is_db: false, display_unit: Divide(Unit { name: "N", exponent: 1.0 }, Multiply(Unit { name: "kg", exponent: 1.0 }, Divide(Unit { name: "m", exponent: 1.0 }, Unit { name: "s", exponent: 2.0 }))) } })
